Update documentation and verify security findings
- Ran OWASP dependency-check confirming 18 Tomcat vulnerabilities (5 CRITICAL, 9 HIGH, 4 MEDIUM)
- Verified all 43 tests pass successfully without Mockito/ByteBuddy errors
- Documented discrepancies between claims and actual security status